# rift

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile
scripts/: README.md  rift-auto-snapshot  rift-pane
scripts/bash/: rift-aliases.bash  rift-autostart.bash
scripts/fish/conf.d/: rift-autostart.fish
scripts/fish/functions/: r.fish  rift-load-snapshot.fish  rift-pick.fish  rift-restore.fish  rift-snapshot.fish
scripts/kitty/: bindings.conf  rift-snapshot.py  rift_spawn.py
scripts/launchd/: com.user.rift-snapshot.plist
src/: commands.rs  completions.rs  daemon.rs  ipc.rs  logger.rs  main.rs  socket.rs  util.rs
src/daemon/: client.rs  mod.rs  server.rs
