[package]
name = "rift"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
env_logger = "0.11.9"
libc = "0.2.183"
log = "0.4.29"
nix = { version = "0.31.2", features = ["poll", "signal", "term", "fs", "net", "process"] }
bytes = "1"
tokio = { version = "1", default-features = false, features = ["rt", "net", "signal", "io-util", "macros", "time", "sync"] }
vt100 = "0.16.2"
